<package>
    <name>move_base_flex</name>
    <version>0.1.0</version>
    <description>
       Move Base Flex (MBF) is a backwards-compatible replacement for move_base.
       MBF can use existing plugins for move_base, and provides an enhanced version
       of the same ROS interface. It exposes action servers for planning, controlling
       and recovering, providing detailed information of the current state and the
       plugin’s feedback. An external executive logic can use MBF and its actions
       to perform smart and flexible navigation strategies. Magazino has successfully
       deployed MBF at customer facilities to control TORU robots in highly dynamical
       environments. Furthermore, MBF enables the use of other map representations,
       e.g. meshes.
       See <a href="wiki.ros.org/move_base_flex"> move_base_flex ROS wiki page</a>.
    </description>
    <url>http://wiki.ros.org/move_base_flex</url>
    <author email="spuetz@uos.de">Sebastian Pütz</author>
    <maintainer email="spuetz@uos.de">Sebastian Pütz</maintainer>
    <maintainer email="santos@magazino.eu">Jorge Santos</maintainer>
    <license>3-Clause BSD</license>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>tf</build_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>pluginlib</build_depend>
    <build_depend>actionlib</build_depend>
    <build_depend>actionlib_msgs</build_depend>
    <build_depend>base_local_planner</build_depend>
    <build_depend>dynamic_reconfigure</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>std_srvs</build_depend>
    <build_depend>nav_msgs</build_depend>
    <build_depend>geometry_msgs</build_depend>
    <build_depend>move_base_flex_core</build_depend>
    <build_depend version_gte="2.1.7">nav_core</build_depend>
    <build_depend version_gte="0.1.2" version_lt="0.1.3">move_base_flex_msgs</build_depend>

    <run_depend>tf</run_depend>
    <run_depend>roscpp</run_depend>
    <run_depend>pluginlib</run_depend>
    <run_depend>actionlib</run_depend>
    <run_depend>actionlib_msgs</run_depend>
    <run_depend>base_local_planner</run_depend>
    <run_depend>dynamic_reconfigure</run_depend>
    <run_depend>std_msgs</run_depend>
    <run_depend>std_srvs</run_depend>
    <run_depend>nav_msgs</run_depend>
    <run_depend>geometry_msgs</run_depend>
    <run_depend>move_base_flex_core</run_depend>
    <run_depend version_gte="2.1.7">nav_core</run_depend>
    <run_depend version_gte="0.1.2" version_lt="0.1.3">move_base_flex_msgs</run_depend>

    <!-- Required by the backward compatibility move_base relay -->
    <run_depend>move_base_msgs</run_depend>
    <run_depend>move_base</run_depend>

    <export>
      <rosdoc config="rosdoc.yaml" />
    </export>
</package>
