<?xml version="1.0"?>
<package format="2">
  <name>move_base_flex</name>
  <version>0.4.0</version>
  <description>
       Move Base Flex (MBF) is a backwards-compatible replacement for move_base. MBF can use existing plugins for move_base, and provides an enhanced version of the planner, controller and recovery plugin ROS interfaces. It exposes action servers for planning, controlling and recovering, providing detailed information of the current state and the plugin’s feedback. An external executive logic can use MBF and its actions to perform smart and flexible navigation strategies. Furthermore, MBF enables the use of other map representations, e.g. meshes or grid_map
       
       This package is a meta package and refers to the Move Base Flex stack packages.The abstract core of MBF – without any binding to a map representation – is represented by the <a href="http://wiki.ros.org/mbf_abstract_nav">mbf_abstract_nav</a> and the <a href="http://wiki.ros.org/mbf_abstract_core">mbf_abstract_core</a>. For navigation on costmaps see <a href="http://wiki.ros.org/mbf_costmap_nav">mbf_costmap_nav</a> and <a href="http://wiki.ros.org/mbf_costmap_core">mbf_costmap_core</a>.
  </description>

  <maintainer email="spuetz@uos.de">Sebastian Pütz</maintainer>
  <license>BSD-3</license>
  <url type="website">http://wiki.ros.org/move_base_flex</url>
  <author email="spuetz@uos.de">Sebastian Pütz</author>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>mbf_abstract_core</exec_depend>
  <exec_depend>mbf_abstract_nav</exec_depend>
  <exec_depend>mbf_costmap_core</exec_depend>
  <exec_depend>mbf_costmap_nav</exec_depend>
  <exec_depend>mbf_msgs</exec_depend>
  <exec_depend>mbf_simple_nav</exec_depend>
  <exec_depend>mbf_utility</exec_depend>

  <export>
    <metapackage/>
  </export>
</package>
