<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
    <name>move_base_flex_core</name>
    <version>0.1.0</version>
    <description>
        This package provides common interfaces for navigation specific robot actions. Currently, this package provides
        the BaseGlobalPlanner, BaseLocalPlanner, and RecoveryBehavior interfaces, which can be used to build actions
        that can easily swap their planner, local controller, or recovery behavior for new versions adhering to the
        same interface. Furthermore, it contains the AbstractGlobalPlanner, AbstractLocalPlanner and
        AbstractRecoveryBehavior as more abstract base classes for the BaseGlobalPlanner, BaseLocalPlanner and
        RecoveryBehavior. The abstract classes provides a more meaningful interface enabling the planners to return
        additional information, e.g. why something went wring. The abstract interface also allow to implement planners
        which do not use costmaps, e.g., for planning in 3D.
    </description>
    <url>http://wiki.ros.org/move_base_flex_core</url>
    <author email="santos@magazino.eu">Jorge Santos</author>
    <maintainer email="spuetz@uos.de">Sebastian Pütz</maintainer>
    <maintainer email="santos@magazino.eu">Jorge Santos</maintainer>
    <license>3-Clause BSD</license>

    <buildtool_depend>catkin</buildtool_depend>

	<depend>nav_core</depend>
    <depend>costmap_2d</depend>
    <depend>geometry_msgs</depend>
    <depend>std_msgs</depend>
    <depend>tf</depend>

</package>
